test/classes/initializers/siblingCall/inBeginOn.comm-none.good
inBeginOn.chpl:4: In initializer:
inBeginOn.chpl:7: error: use of this.init() call in an on block
